--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 Thumbs.db
 #Ignore files build by Visual Studio
 *.obj
-*.exe
 *.pdb
 *.user
 *.aps
@@ -19,15 +18,14 @@ Thumbs.db
 *.cache
 *.ilk
 *.log
-[Bb]in
 [Dd]ebug*/
 *.lib
 *.sbr
 obj/
-[Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
-
+*.InstallLog
+*.InstallState
 
 TestClient/*.user
 TestClient/bin
@@ -35,3 +33,4 @@ TestClient/obj
 packages/*
 Build/runbuild.txt
 docs/*
+
