--- a/ShareFileSnapIn/ShareFileSnapIn.csproj
+++ b/ShareFileSnapIn/ShareFileSnapIn.csproj
@@ -40,11 +40,11 @@
     </Reference>
     <Reference Include="ShareFile.Api.Client.Core, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\ShareFile.Api.Client.Core.dll</HintPath>
+      <HintPath>..\packages\ShareFile.Api.Client.3.0.0\lib\net45\ShareFile.Api.Client.Core.dll</HintPath>
     </Reference>
     <Reference Include="ShareFile.Api.Client.Net45, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\ShareFile.Api.Client.Net45.dll</HintPath>
+      <HintPath>..\packages\ShareFile.Api.Client.3.0.0\lib\net45\ShareFile.Api.Client.Net45.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
@@ -120,9 +120,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="lib\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="ShareFileSnapIn.dll-Help.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
