--- a/ShareFileSnapIn/packages.config
+++ b/ShareFileSnapIn/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
+  <package id="ShareFile.Api.Client" version="3.0.0" targetFramework="net451" />
   <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net45" />
 </packages>
