--- a/ShareFileSnapIn/ShareFileSnapIn.csproj
+++ b/ShareFileSnapIn/ShareFileSnapIn.csproj
@@ -48,13 +48,13 @@
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="ShareFile.Api.Client.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8e51300fc9259180, processorArchitecture=MSIL">
+    <Reference Include="ShareFile.Api.Client.Core, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Release\ShareFile.Api.Client.Core.dll</HintPath>
+      <HintPath>..\packages\ShareFile.Api.Client.3.0.8\lib\net45\ShareFile.Api.Client.Core.dll</HintPath>
     </Reference>
-    <Reference Include="ShareFile.Api.Client.Net45, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8e51300fc9259180, processorArchitecture=MSIL">
+    <Reference Include="ShareFile.Api.Client.Net45, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Release\ShareFile.Api.Client.Net45.dll</HintPath>
+      <HintPath>..\packages\ShareFile.Api.Client.3.0.8\lib\net45\ShareFile.Api.Client.Net45.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
