Updated ShareFile SDK to 3.0.8

--- a/Test-ShareFileSnapIn/Test-ShareFileSnapIn.csproj
+++ b/Test-ShareFileSnapIn/Test-ShareFileSnapIn.csproj
@@ -38,9 +38,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ShareFileSnapIn">
-      <HintPath>..\ShareFileSnapIn\bin\Release\ShareFileSnapIn.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -77,6 +74,12 @@
     <None Include="OrderedTests.orderedtest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ShareFileSnapIn\ShareFileSnapIn.csproj">
+      <Project>{db7fd2e6-2884-4e66-bfd8-219c007da4cb}</Project>
+      <Name>ShareFileSnapIn</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
