Committing after couple of fixes: - Merged latest changes from Citrix - Fixed ShareFile path trim issue

--- a/ShareFileSnapIn/ShareFileSnapIn.csproj
+++ b/ShareFileSnapIn/ShareFileSnapIn.csproj
@@ -46,15 +46,15 @@
       <HintPath>bin\Release\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
-      <HintPath>bin\Release\NLog.dll</HintPath>
+      <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="ShareFile.Api.Client.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8e51300fc9259180, processorArchitecture=MSIL">
+    <Reference Include="ShareFile.Api.Client.Core, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Release\ShareFile.Api.Client.Core.dll</HintPath>
+      <HintPath>..\packages\ShareFile.Api.Client.3.0.9\lib\net45\ShareFile.Api.Client.Core.dll</HintPath>
     </Reference>
-    <Reference Include="ShareFile.Api.Client.Net45, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8e51300fc9259180, processorArchitecture=MSIL">
+    <Reference Include="ShareFile.Api.Client.Net45, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Release\ShareFile.Api.Client.Net45.dll</HintPath>
+      <HintPath>..\packages\ShareFile.Api.Client.3.0.9\lib\net45\ShareFile.Api.Client.Net45.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
@@ -134,18 +134,12 @@
     <Content Include="Assets\sf-icon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\Citrix EULA.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
     <None Include="Assets\Citrix EULA.rtf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
     <None Include="ShareFile.Format.ps1xml">
