--- a/ShareFileSnapIn/ShareFileSnapIn.csproj
+++ b/ShareFileSnapIn/ShareFileSnapIn.csproj
@@ -47,10 +47,6 @@
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="ShareFile.Api.Client.Core, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ShareFile.Api.Client.3.0.9\lib\net45\ShareFile.Api.Client.Core.dll</HintPath>
-    </Reference>
     <Reference Include="ShareFile.Api.Client.Net45, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ShareFile.Api.Client.3.0.9\lib\net45\ShareFile.Api.Client.Net45.dll</HintPath>
@@ -163,6 +159,12 @@
     <Content Include="ShareFileSnapIn.dll-Help.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ShareFile-NET\Core\ShareFile.Api.Client.Core-net45.csproj">
+      <Project>{5adb6950-d609-4847-a842-0bdd6cdbbfb9}</Project>
+      <Name>ShareFile.Api.Client.Core-net45</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
